# week1_ml_project

./: Dockerfile  pyproject.toml
project_files/: fastapi_application.py
project_files/core/model/: input_features.py
project_files/datafiles/: LinearRegression.pkl
project_files/notebooks/: salaries_prediction.ipynb
project_files/utils/: encoder_loader.py  fastapi_application.py  model_loader.py
src/: .env
src/car_price_prediction/: fastapi_application.py
src/car_price_prediction/models/: pydantic_model.py
src/car_price_prediction/notebooks/: eda.ipynb
src/car_price_prediction/utils/: files_loader.py  input_tranformer.py  input_transformer.py
src/project_files/: fastapi_application.py
src/project_files/config/v1/: __init.py  database_config.py
src/project_files/core/model/: input_features.py  mongo_schema.py
src/project_files/datafiles/: LinearRegression.pkl  encoder.pkl
src/project_files/notebooks/: salaries_prediction.ipynb
src/project_files/utils/: encoder_loader.py  files_loader.py  model_loader.py
