[tool.poetry]
name = "week1-ml-project"
version = "0.1.0"
description = ""
authors = ["waseem-avi <waseem.riyaz@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.26.4"
pandas = "^2.2.2"
tensorflow = "^2.16.1"
seaborn = "^0.13.2"
plotly = "^5.21.0"
xgboost = "^2.0.3"
uvicorn = "^0.29.0"
fastapi = "^0.110.2"
python-multipart = "^0.0.9"
jinja2 = "^3.1.3"
pydantic = "^2.7.1"
scikit-learn = "^1.4.2"
mongoengine = "^0.28.2"
pydantic-settings = "^2.2.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
