[tool.poetry]
name = "car-price-prediction"
version = "0.1.0"
description = ""
authors = ["waseem-avi <waseem.riyaz@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
scikit-learn = "^1.4.2"
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
